objects/Project__c.object
<CustomObject>
    <fields>
        <fullName>Delivery_Date__c</fullName>
        <defaultValue>Today()+7</defaultValue>
        <description>Required field to enter/pick a date for release</description>
        <label>Delivery Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Delivery_Fiscal_Year__c</fullName>
        <description>Delivery fiscal year of a project.</description>
        <label>Delivery Fiscal Year</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>FY2015</fullName>
                </value>
                <value>
                    <fullName>FY2016</fullName>
                </value>
                <value>
                    <fullName>FY2017</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Delivery_Quarter__c</fullName>
        <description>Delivery quarter for a project</description>
        <label>Delivery Quarter</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Q1</fullName>
                </value>
                <value>
                    <fullName>Q2</fullName>
                </value>
                <value>
                    <fullName>Q3</fullName>
                </value>
                <value>
                    <fullName>Q4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Organization_Producing_Business_Outcomes__c</fullName>
        <description>Required field for selecting Organization</description>
        <label>Organization Producing Business Outcomes</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CITS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Project_Count__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Service_Offering__c</fullName>
        <description>Required field for selecting a particular Service Offering</description>
        <label>Service Offering</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Account Management</fullName>
                </value>
                <value>
                    <fullName>Contact Management</fullName>
                </value>
                <value>
                    <fullName>Customer Issue Management</fullName>
                </value>
                <value>
                    <fullName>Demand Generation</fullName>
                </value>
                <value>
                    <fullName>Forecasting</fullName>
                </value>
                <value>
                    <fullName>Lead Management</fullName>
                </value>
                <value>
                    <fullName>Opportunity Management</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Required field for the status of a project</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Planned</fullName>
                </value>
                <value>
                    <fullName>In-Flight</fullName>
                </value>
                <value>
                    <fullName>Delivered</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Work_Request_Number__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Optional field to lookup work request number</description>
        <label>Work Request Number</label>
        <referenceTo>Work_Request__c</referenceTo>
        <relationshipLabel>Projects</relationshipLabel>
        <relationshipName>Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <description>Custom Object for Projects for Mobile Dashboard</description>
    <label>Project</label>
    <nameField>
        <label>Project Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Projects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Delivery_Date__c</columns>
        <columns>Organization_Producing_Business_Outcomes__c</columns>
        <columns>Service_Offering__c</columns>
        <columns>Status__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All Projects</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_Projects_From_Current_FY</fullName>
        <columns>NAME</columns>
        <columns>Delivery_Date__c</columns>
        <columns>Organization_Producing_Business_Outcomes__c</columns>
        <columns>Status__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Delivery_Date__c</field>
            <operation>equals</operation>
            <value>THIS_FISCAL_YEAR</value>
        </filters>
        <label>All Projects From Current FY</label>
        <language>en_US</language>
        <sharedTo>
            <group>Executives</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Projects_From_Next_FY</fullName>
        <columns>NAME</columns>
        <columns>Delivery_Date__c</columns>
        <columns>Organization_Producing_Business_Outcomes__c</columns>
        <columns>Service_Offering__c</columns>
        <columns>Status__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Delivery_Date__c</field>
            <operation>equals</operation>
            <value>NEXT_FISCAL_YEAR</value>
        </filters>
        <label>All Projects From Next FY</label>
        <language>en_US</language>
        <sharedTo>
            <group>Executives</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Projects_From_Previous_FY</fullName>
        <columns>NAME</columns>
        <columns>Delivery_Date__c</columns>
        <columns>Organization_Producing_Business_Outcomes__c</columns>
        <columns>Service_Offering__c</columns>
        <columns>Status__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Delivery_Date__c</field>
            <operation>equals</operation>
            <value>LAST_FISCAL_YEAR</value>
        </filters>
        <label>All Projects From Previous FY</label>
        <language>en_US</language>
        <sharedTo>
            <group>Executives</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>My_Delivered</fullName>
        <columns>NAME</columns>
        <columns>Delivery_Date__c</columns>
        <columns>Organization_Producing_Business_Outcomes__c</columns>
        <columns>Service_Offering__c</columns>
        <columns>Status__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Delivered</value>
        </filters>
        <label>My Delivered</label>
        <language>en_US</language>
        <sharedTo>
            <group>Chris_Miura_s_Team</group>
            <group>Hemang_Mehta_s_Team</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>My_In_Flight</fullName>
        <columns>NAME</columns>
        <columns>Delivery_Date__c</columns>
        <columns>Organization_Producing_Business_Outcomes__c</columns>
        <columns>Service_Offering__c</columns>
        <columns>Status__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>In-Flight</value>
        </filters>
        <label>My In-Flight</label>
        <language>en_US</language>
        <sharedTo>
            <group>Chris_Miura_s_Team</group>
            <group>Hemang_Mehta_s_Team</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>My_Planned</fullName>
        <columns>NAME</columns>
        <columns>Delivery_Date__c</columns>
        <columns>Organization_Producing_Business_Outcomes__c</columns>
        <columns>Service_Offering__c</columns>
        <columns>Status__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Planned</value>
        </filters>
        <label>My Planned</label>
        <language>en_US</language>
        <sharedTo>
            <group>Chris_Miura_s_Team</group>
            <group>Hemang_Mehta_s_Team</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Owned_By_Me</fullName>
        <columns>NAME</columns>
        <columns>Delivery_Date__c</columns>
        <columns>Organization_Producing_Business_Outcomes__c</columns>
        <columns>Service_Offering__c</columns>
        <columns>Status__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Mine</filterScope>
        <label>My Projects (All)</label>
        <language>en_US</language>
        <sharedTo>
            <group>Chris_Miura_s_Team</group>
            <group>Hemang_Mehta_s_Team</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Projects_From_Current_Quarter</fullName>
        <columns>NAME</columns>
        <columns>Delivery_Date__c</columns>
        <columns>Organization_Producing_Business_Outcomes__c</columns>
        <columns>Service_Offering__c</columns>
        <columns>Status__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Delivery_Date__c</field>
            <operation>equals</operation>
            <value>THIS_FISCAL_QUARTER</value>
        </filters>
        <label>Projects From Current Quarter</label>
        <language>en_US</language>
        <sharedTo>
            <group>Executives</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Projects_From_Previous_Quarter</fullName>
        <columns>NAME</columns>
        <columns>Delivery_Date__c</columns>
        <columns>Organization_Producing_Business_Outcomes__c</columns>
        <columns>Service_Offering__c</columns>
        <columns>Status__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Delivery_Date__c</field>
            <operation>equals</operation>
            <value>LAST_FISCAL_QUARTER</value>
        </filters>
        <label>Projects From Previous Quarter</label>
        <language>en_US</language>
        <sharedTo>
            <group>Executives</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Projects_From_Upcoming_Quarter</fullName>
        <columns>NAME</columns>
        <columns>Delivery_Date__c</columns>
        <columns>Organization_Producing_Business_Outcomes__c</columns>
        <columns>Service_Offering__c</columns>
        <columns>Status__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Delivery_Date__c</field>
            <operation>equals</operation>
            <value>NEXT_FISCAL_QUARTER</value>
        </filters>
        <label>Projects From Upcoming Quarter</label>
        <language>en_US</language>
        <sharedTo>
            <group>Executives</group>
        </sharedTo>
    </listViews>
    <validationRules>
        <fullName>Delivery_Date_Status_Check</fullName>
        <active>true</active>
        <description>When Status is set to delivered, Delivery Date should be less than today (or whenever they change the status)</description>
        <errorConditionFormula>AND(ISPICKVAL(Status__c, 'Delivered'),Delivery_Date__c  &gt;  TODAY())</errorConditionFormula>
        <errorDisplayField>Delivery_Date__c</errorDisplayField>
        <errorMessage>Delivery date cannot be in the future.</errorMessage>
    </validationRules>
</CustomObject>